--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -369,18 +369,10 @@ footer {
   footer .partner-logos {
     padding: 20px 0px 40px; }
   footer a {
-    margin-right: 30px; }
-    footer a:last-child {
-      margin-right: 0px; }
+    display: block;
+    padding-bottom: 20px; }
     footer a img {
-      width: 60%;
-      height: 40px; }
-
-footer .not-ms .partner-logo img {
-  width: 40%;
-  margin-top: 20px;
-  height: 50px;
-  width: 120px; }
+      height: 60px; }
 
 .footer {
   background-color: black;
@@ -395,16 +387,6 @@ footer .not-ms .partner-logo img {
   max-width: none; }
   .footer:last-child {
     margin-right: 0; }
-  .footer .partner-logo {
-    float: left;
-    display: block;
-    margin-right: 2.35765%;
-    width: 100%;
-    margin-bottom: 10px; }
-    .footer .partner-logo:last-child {
-      margin-right: 0; }
-    .footer .partner-logo:first-child {
-      margin-bottom: 10px; }
   .footer nav, .footer ul {
     float: none;
     width: auto; }
@@ -415,10 +397,6 @@ footer .not-ms .partner-logo img {
     padding: 0px; }
   .footer nav {
     padding: 10px 0px; }
-
-#micrsoft {
-  height: 80px;
-  width: 130px; }
 
 .mail-signup #mc_embed_signup #mc_embed_signup_scroll label[for=mce-EMAIL] {
   display: block;
@@ -630,38 +608,20 @@ footer .not-ms .partner-logo img {
     margin-top: 150px; }
 
   footer .partner-logos {
-    position: relative;
     float: left;
     display: block;
     margin-right: 2.35765%;
-    width: 100%;
-    display: inline-block;
-    margin: 30px 40px 80px 40px; }
+    width: 100%; }
     footer .partner-logos:last-child {
       margin-right: 0; }
-  footer .partner-logo {
-    display: inline-block; }
-  footer #microsoft {
-    height: 40px;
-    width: 430px;
-    position: absolute;
-    top: 1px;
-    left: 220px;
-    margin-right: 90px; }
-  footer #citytech {
-    height: 40px;
-    width: 300px;
-    position: absolute;
-    top: 1px;
-    left: 420px;
-    margin-left: 120px; }
-  footer #techpipe {
-    height: 40px;
-    width: 300px;
-    position: absolute;
-    top: 1px;
-    left: 605px;
-    margin-left: 120px; }
+    footer .partner-logos a {
+      display: inline-block; }
+      footer .partner-logos a img {
+        height: 60px;
+        margin-right: 20px;
+        text-align: center; }
+        footer .partner-logos a img:last-child {
+          margin-right: 0px; }
 
   .nav-bar .logo {
     width: auto;
