--- a/stylesheets/footer_1px.scss
+++ b/stylesheets/footer_1px.scss
@@ -6,22 +6,15 @@ footer {
     padding: 20px 0px 40px;
   }
   a {
-    margin-right: 30px;
-    &:last-child {
-      margin-right: 0px;
-    }
+    display: block;
+    padding-bottom:20px;
     img {
-      width:60%;
-      height: 40px;
+
+      height: 60px;
     }
   }
 }
-footer .not-ms .partner-logo img { 
-  width:40%;
-  margin-top:20px;
-  height: 50px;
-  width: 120px;
-}
+
 .footer {
   background-color:black;
   color: white;
@@ -30,11 +23,6 @@ footer .not-ms .partner-logo img {
   text-align:center;
   padding: 15px;  
   max-width: none;
-  .partner-logo { 
-    @include span-columns(12);
-    margin-bottom:10px;
-    &:first-child { margin-bottom:10px; }
-  }
   nav, ul { 
     float: none;
     width: auto;
@@ -45,8 +33,4 @@ footer .not-ms .partner-logo img {
     padding: 0px;
   }
   nav { padding: 10px 0px; }
-}
-#micrsoft {
-  height: 80px;
-  width: 130px;
 }
