Styles mobile and desktop timeline

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -302,49 +302,68 @@ nav {
 
 .key-dates {
   position: relative; }
+  .key-dates::after {
+    clear: both;
+    content: "";
+    display: table; }
+  .key-dates h2 {
+    margin-bottom: -80px; }
 
-.key-date {
-  display: block; }
-  .key-date h4 {
-    background-color: white; }
-  .key-date h3 {
-    height: 15px;
-    width: 235px;
-    background-color: white;
-    margin-top: 30px;
-    padding-bottom: 25px; }
-  .key-date#dot1 {
-    margin-top: 90px;
-    margin-left: -20px; }
-  .key-date#dot2 {
-    margin-top: 60px; }
-  .key-date#dot3 {
-    margin-top: 80px; }
-  .key-date#dot4 {
-    margin-top: 195px; }
-  .key-date h3 {
-    margin-left: -30px;
-    margin-right: auto;
-    text-align: center; }
-    .key-date h3:after {
-      content: ' ';
-      z-index: 1;
-      margin-left: 15px;
-      padding-left: -5px;
-      /*margin-right: 78px;*/
-      margin-top: 4px;
-      left: 147px;
-      position: absolute;
-      display: inline;
-      height: 15px;
-      width: 15px;
-      border-radius: 50%;
-      background-color: black; }
-  .key-date h4 {
-    margin-left: 90px;
-    margin-right: -25px;
+.timeline {
+  width: 100%;
+  position: relative; }
+  .timeline::after {
+    clear: both;
+    content: "";
+    display: table; }
+  .timeline .key-date {
+    width: 100%; }
+    .timeline .key-date h3, .timeline .key-date h4 {
+      width: 50%; }
+    .timeline .key-date span {
+      margin-left: -8.5px;
+      left: 50%; }
+  .timeline #dot1 {
+    position: absolute;
+    top: 180px;
+    /*    left: 11.5%;
+    */ }
+  .timeline #dot2 {
+    position: absolute;
+    top: 275px;
+    /*    left: 20%;
+    */ }
+  .timeline #dot3 {
+    position: absolute;
+    top: 385px;
+    /*    left: 11%;
+    */ }
+  .timeline #dot4 {
+    position: absolute;
+    top: 607px;
+    /*    left: 22.5%;
+    */ }
+  .timeline h3 {
+    font-weight: 500;
+    display: block;
+    text-align: right;
+    float: left;
+    margin: 0;
+    padding-right: 27px; }
+  .timeline span {
+    position: absolute;
     text-align: center;
-    margin-top: -39px; }
+    border-radius: 50%;
+    width: 15px;
+    height: 15px;
+    z-index: 2;
+    background-color: black; }
+  .timeline h4 {
+    margin: 0px;
+    display: block;
+    text-align: left;
+    float: left;
+    padding-left: 25px; }
 
 .line {
   margin-top: 45px;
@@ -352,7 +371,7 @@ nav {
   position: absolute;
   top: 110px;
   left: 49.5%;
-  height: 472px;
+  height: 497px;
   width: 3.5px;
   background-color: #16DDA4; }
   .line .line-start {
@@ -366,12 +385,9 @@ nav {
     position: absolute;
     height: 5px;
     width: 16px;
-    top: 467px;
+    top: 492px;
     left: -6px;
     background-color: #16DDA4; }
-
-.timeline {
-  position: relative; }
 
 footer {
   padding-top: 30px;
@@ -384,6 +400,8 @@ footer {
     margin-right: 0; }
   footer .partner-logos {
     padding: 30px 0px 80px; }
+  footer h2 {
+    margin-top: 700px; }
   footer a {
     margin-right: 30px; }
     footer a:last-child {
@@ -550,87 +568,222 @@ footer {
   .curriculum .curriculum-blurbs .image-blurb {
     margin-top: 40px; }
 
-  .key-date {
-    position: absolute;
-    display: inline-block; }
-    .key-date h4 {
-      margin-top: 35px;
-      font-size: 1em; }
-    .key-date#dot1 {
-      left: 2%;
-      top: 27%;
-      z-index: 4; }
-    .key-date#dot2 {
-      left: 21%;
-      top: 20%;
-      z-index: 3; }
-    .key-date#dot3 {
-      left: 42%;
-      top: -6%; }
-    .key-date#dot4 {
-      left: 97%;
-      top: -124%; }
-    .key-date::after {
-      clear: both;
-      content: "";
-      display: table; }
-    .key-date h3 {
-      margin-left: -60px;
-      margin-right: auto;
+  /*.key-dates { 
+    position: relative;
+    @include clearfix;
+    h2 {
+      margin-bottom: -80px;
+    }
+  }
+  .timeline {
+    width: 100%;
+    position: relative;
+    @include clearfix;
+    .key-date { 
+      width: 100%;
+      h3, h4 { 
+        width: 50%;
+      }
+      span { 
+        margin-left: -8.5px; 
+        left: 50%;
+      } 
+    }  
+    #dot1{
+      position: absolute;
+      top: 110px;
+      left: -260px;
+    }
+    #dot2{
+      position: absolute;
+      top: 120px;
+      left: 170px;
+    }
+    #dot3{
+      position: absolute;
+      top: 120px;
+      left: 360px;
+    }
+    #dot4{
+      position: absolute;
+      top: 120px;
+      left: 860px;
+    }
+    h3 {
+      display: block;
+      text-align: right;
+      margin-right: 20px;
+    }
+    span {
+      display: block;
+      margin-left: 20%; 
       text-align: center;
-      height: 25px;
-      width: 170px;
-      padding: 2px 2px 2px 2px; }
-      .key-date h3:after {
-        content: ' ';
-        margin-top: 15px;
-        z-index: 1;
-        margin-left: -65px;
-        margin-right: 315px;
-        position: relative;
-        text-align: center;
-        display: block;
-        height: 15px;
-        width: 15px;
-        border-radius: 50%;
-        background-color: black; }
-    .key-date h4 {
-      margin-left: -11px;
-      margin-right: auto;
+      border-radius: 50%;
+      width: 15px;
+      height: 15px;
+      z-index: 2;
+      padding-left: -15px;
+      background-color: black;
+    }
+    h4 {
       text-align: center;
-      height: 25px;
-      width: 90px; }
-
-  .line {
-    z-index: 0;
+      display: block;
+     /* margin-left: 0px;*/
+  /*    text-align: right;
+    }
+  }*/
+  /*.line {
+    z-index:0;
     position: absolute;
     top: 178px;
     left: -25px;
     height: 3.5px;
     width: 985px;
+    background-color: $green;
+    .line-start {
+      position: absolute;
+      height: 16px;
+      width: 3px;
+      top: -5px;
+      left: 983px;
+      background-color: $green;
+    }
+    .line-end {
+      position: absolute;
+      height: 16px;
+      width: 3px;
+      top: -6px;
+      left: 0px;
+      background-color: $green;
+    }
+  }
+  
+  /**/
+  .key-dates {
+    position: relative; }
+    .key-dates::after {
+      clear: both;
+      content: "";
+      display: table; }
+    .key-dates h2 {
+      margin-bottom: -80px; }
+
+  .timeline {
+    width: 100%;
+    position: relative;
+    display: inline-block; }
+    .timeline::after {
+      clear: both;
+      content: "";
+      display: table; }
+    .timeline .key-date {
+      width: 200px;
+      height: 200px; }
+      .timeline .key-date span {
+        margin-left: -8.5px;
+        top: 40px;
+        left: 80px; }
+      .timeline .key-date h3 {
+        width: 180px;
+        left: 20px; }
+      .timeline .key-date h4 {
+        width: 180px;
+        left: 10px; }
+    .timeline #dot1 {
+      left: -65px;
+      top: 177px; }
+      .timeline #dot1 h3 {
+        position: absolute;
+        left: -13px;
+        width: 200px; }
+      .timeline #dot1 h4 {
+        position: absolute;
+        left: 13px;
+        width: 180px; }
+    .timeline #dot2 {
+      left: 110px;
+      top: 177px; }
+      .timeline #dot2 h3 {
+        position: absolute;
+        left: -35px;
+        width: 200px; }
+      .timeline #dot2 h4 {
+        position: absolute;
+        left: 10px;
+        width: 180px; }
+    .timeline #dot3 {
+      left: 295px;
+      top: 177px; }
+      .timeline #dot3 h3 {
+        position: absolute;
+        left: -10px;
+        width: 200px; }
+      .timeline #dot3 h4 {
+        position: absolute;
+        left: 3px;
+        width: 180px; }
+    .timeline #dot4 {
+      left: 790px;
+      top: 177px; }
+      .timeline #dot4 h3 {
+        position: absolute;
+        left: -45px;
+        width: 200px; }
+      .timeline #dot4 h4 {
+        position: absolute;
+        left: 1px;
+        width: 180px; }
+    .timeline::after {
+      clear: both;
+      content: "";
+      display: table; }
+    .timeline h3 {
+      font-weight: 500;
+      display: inline;
+      text-align: none;
+      float: none;
+      margin: 0;
+      padding-right: 27px; }
+    .timeline span {
+      position: absolute;
+      text-align: center;
+      border-radius: 50%;
+      width: 15px;
+      height: 15px;
+      z-index: 2;
+      background-color: black; }
+    .timeline h4 {
+      position: absolute;
+      top: 60px;
+      left: 18px;
+      margin: 0;
+      display: inline;
+      text-align: none;
+      float: none;
+      padding-left: 25px; }
+
+  .line {
+    z-index: 0;
+    position: absolute;
+    top: 178px;
+    left: -90px;
+    height: 3.5px;
+    width: 1025px;
     background-color: #16DDA4; }
     .line .line-start {
       position: absolute;
-      height: 6px;
-      width: 13px;
-      top: -3px;
-      left: 983px;
+      height: 16px;
+      width: 3px;
+      top: -6px;
+      left: 1025px;
       background-color: #16DDA4; }
     .line .line-end {
       position: absolute;
       height: 16px;
       width: 3px;
       top: -6px;
+      left: 0px;
       background-color: #16DDA4; }
-
-  .timeline {
-    float: left;
-    display: block;
-    margin-right: 2.35765%;
-    width: 100%;
-    position: relative; }
-    .timeline:last-child {
-      margin-right: 0; }
 
   footer a {
     margin-right: 60px; }
@@ -638,7 +791,7 @@ footer {
       height: 60px; }
 
   footer h2 {
-    margin-top: 150px; }
+    margin-top: 310px; }
 
   .nav-bar .logo {
     width: auto;
