--- a/stylesheets/footer_1px.scss
+++ b/stylesheets/footer_1px.scss
@@ -5,6 +5,9 @@ footer {
   .partner-logos {
     padding: 30px 0px 80px;
   }
+  h2 {
+    margin-top: 700px;
+  }
   a {
     margin-right: 30px;
     &:last-child {
