nav working just need style now

--- a/stylesheets/nav_1px.scss
+++ b/stylesheets/nav_1px.scss
@@ -3,42 +3,103 @@
   @include clearfix;
   .logo {
     width: 100%;
-    text-align: center;
+    // text-align: center;
     p {
       color: $green;
       font-size: modular-scale(-2);
-      margin-right: 0px;
+  //     margin-right: 0px;
       font-weight: 900;
+    // }
     }
-  }
   z-index: 9;
   background-color: rgba(0, 0, 0, .7);
   top: 0px;
   left: 0px;
   position: fixed;
-}
+  }
 nav {
-  @include row();
-  ul {
-    @include clearfix;
-    font-family: $font;
+  button { float:right;}
+  .nav-list {
+    // hidden;
+    z-index: 3;
+
+    @include span-columns(12);
+    ul li {color:#000000;}
+  }
+  .c-hamburger {
+    display: block;
+    position: relative;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+    width: 96px;
+    height: 96px;
+    font-size: 0;
+    text-indent: -9999px;
+    appearance: none;
+    box-shadow: none;
+    border-radius: none;
+    border: none;
+    cursor: pointer;
+    transition: background 0.3s;
+  }
+
+  .c-hamburger:focus {
+    outline: none;
+  }
+  .c-hamburger span {
+    display: block;
+    position: absolute;
+    top: 44px;
+    left: 18px;
+    right: 18px;
+    height: 8px;
+    background: white;
+  }
+
+  .c-hamburger span::before,
+  .c-hamburger span::after {
+    position: absolute;
+    display: block;
+    left: 0;
     width: 100%;
-    text-align: center;
-    padding-left: 0px;
-    margin: 0px;
-    padding-bottom: 10px;
+    height: 8px;
+    background-color: #fff;
+    content: "";
   }
-  li {
-    padding: 0px 3px;
-    font-size: modular-scale(-2);
-    border-right: 2px solid $green;
-    &:last-child { border-right: none; }
-    display: inline;
-    a {
-      color: white;
-      padding-left: 3px;
-      padding-right: 5px;
-    }
-    a:hover { color:$green; }
+
+  .c-hamburger span::before {
+    top: -20px;
   }
+
+  .c-hamburger span::after {
+    bottom: -20px;
+  }
+  .c-hamburger--rot {
+    background-color: #28aadc;
+  }
+
+  .c-hamburger--rot span {
+    transition: transform 0.3s;
+  }
+
+  /* active state, i.e. menu open */
+  .c-hamburger--rot.is-active {
+    background-color: #166888;
+  }
+
+  .c-hamburger--rot.is-active span {
+    transform: rotate(90deg);
+  }
+//   @include row();
+//   ul {
+//     @include clearfix;
+//     font-family: $font;
+//     width: 100%;
+//     text-align: center;
+//     padding-left: 0px;
+//     margin: 0px;
+//     padding-bottom: 10px;
+  }
+  
 }
