--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -250,12 +250,7 @@ h1, h2 {
   float: left;
   display: block;
   margin-right: 2.35765%;
-  width: 100%;
-  z-index: 9;
-  background-color: rgba(0, 0, 0, 0.7);
-  top: 0px;
-  left: 0px;
-  position: fixed; }
+  width: 100%; }
   .nav-bar:last-child {
     margin-right: 0; }
   .nav-bar::after {
@@ -264,43 +259,76 @@ h1, h2 {
     display: table; }
   .nav-bar .logo {
     width: 100%;
-    text-align: center; }
+    z-index: 9;
+    background-color: rgba(0, 0, 0, 0.7);
+    top: 0px;
+    left: 0px;
+    position: fixed; }
     .nav-bar .logo p {
       color: #16DDA4;
       font-size: 0.56278em;
-      margin-right: 0px;
       font-weight: 900; }
-
-nav {
-  display: block; }
-  nav::after {
-    clear: both;
-    content: "";
-    display: table; }
-  nav ul {
-    font-family: Roboto, sans-serif;
-    width: 100%;
-    text-align: center;
-    padding-left: 0px;
-    margin: 0px;
-    padding-bottom: 10px; }
-    nav ul::after {
-      clear: both;
-      content: "";
-      display: table; }
-  nav li {
-    padding: 0px 3px;
-    font-size: 0.56278em;
-    border-right: 2px solid #16DDA4;
-    display: inline; }
-    nav li:last-child {
-      border-right: none; }
-    nav li a {
-      color: white;
-      padding-left: 3px;
-      padding-right: 5px; }
-    nav li a:hover {
-      color: #16DDA4; }
+  .nav-bar nav {
+    /* active state, i.e. menu open */ }
+    .nav-bar nav button {
+      float: right; }
+    .nav-bar nav .nav-list {
+      z-index: 3;
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
+      width: 100%; }
+      .nav-bar nav .nav-list:last-child {
+        margin-right: 0; }
+      .nav-bar nav .nav-list ul li {
+        color: #000000; }
+    .nav-bar nav .c-hamburger {
+      display: block;
+      position: relative;
+      overflow: hidden;
+      margin: 0;
+      padding: 0;
+      width: 96px;
+      height: 96px;
+      font-size: 0;
+      text-indent: -9999px;
+      appearance: none;
+      box-shadow: none;
+      border-radius: none;
+      border: none;
+      cursor: pointer;
+      transition: background 0.3s; }
+    .nav-bar nav .c-hamburger:focus {
+      outline: none; }
+    .nav-bar nav .c-hamburger span {
+      display: block;
+      position: absolute;
+      top: 44px;
+      left: 18px;
+      right: 18px;
+      height: 8px;
+      background: white; }
+    .nav-bar nav .c-hamburger span::before,
+    .nav-bar nav .c-hamburger span::after {
+      position: absolute;
+      display: block;
+      left: 0;
+      width: 100%;
+      height: 8px;
+      background-color: #fff;
+      content: ""; }
+    .nav-bar nav .c-hamburger span::before {
+      top: -20px; }
+    .nav-bar nav .c-hamburger span::after {
+      bottom: -20px; }
+    .nav-bar nav .c-hamburger--rot {
+      background-color: #28aadc; }
+    .nav-bar nav .c-hamburger--rot span {
+      transition: transform 0.3s; }
+    .nav-bar nav .c-hamburger--rot.is-active {
+      background-color: #166888; }
+    .nav-bar nav .c-hamburger--rot.is-active span {
+      transform: rotate(90deg); }
 
 .key-dates {
   position: relative; }
