Removes underline from nav

--- a/stylesheets/nav_1px.scss
+++ b/stylesheets/nav_1px.scss
@@ -38,6 +38,7 @@ nav {
       color: white;
       padding-left: 3px;
       padding-right: 5px;
+      text-decoration: none;
     }
     a:hover { color:$green; }
   }
