--- a/stylesheets/layout_1px.scss
+++ b/stylesheets/layout_1px.scss
@@ -69,6 +69,8 @@ h1, h2 {
   }
   p {
     text-align: center;
+    font-weight: 100;
+    font-size: 1em
   }
   .apply-button { text-align: center; }
   .long-button {
