--- a/stylesheets/timeline_1px.scss
+++ b/stylesheets/timeline_1px.scss
@@ -63,7 +63,9 @@
     display: block;
     text-align: left;
     float: left;
+    margin-top: 2px;
     padding-left: 25px;
+    font-size: 15px;
   }
 }
 .line {
