--- a/stylesheets/timeline_desktop.scss
+++ b/stylesheets/timeline_desktop.scss
@@ -127,8 +127,9 @@
     }
     h4 {
       position: absolute;
-      left: -1px;
+      left: 12px;
       width: 180px;
+      font-size: 1em;
     }
   }
   #dot2 {
@@ -141,8 +142,9 @@
     }
     h4 {
       position: absolute;
-      left: 1px;
+      left: 12px;
       width: 180px;
+      font-size: 1em;
     }
   }
   #dot3 {
@@ -155,8 +157,9 @@
     }
     h4 {
       position: absolute;
-      left: 1px;
+      left: 12px;
       width: 180px;
+      font-size: 1em;
     }
   }
   #dot4 {
@@ -169,8 +172,9 @@
     }
     h4 {
       position: absolute;
-      left: -3px;
+      left: 10px;
       width: 180px;
+      font-size: 1em;
     }
   }
   display: inline-block;
