--- a/stylesheets/nav_desktop.scss
+++ b/stylesheets/nav_desktop.scss
@@ -64,7 +64,7 @@ nav {
     font-size: 14px;
     height: 1em;
     width: 100%;
-    padding: 15px 0px;
+    // padding: 15px 0px;
   }
   li {
     padding: 0px 10px;
