--- a/stylesheets/nav_1px.scss
+++ b/stylesheets/nav_1px.scss
@@ -25,6 +25,7 @@ nav {
     display: none;
 
     ul {
+      z-index: 9;
       padding-left: 0;
       padding-top: 10px;
       list-style-type: none;
