--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -419,6 +419,7 @@ footer {
         .nav-bar nav .nav-list:last-child {
           margin-right: 0; }
         .nav-bar nav .nav-list ul {
+          z-index: 9;
           padding-left: 0;
           padding-top: 10px;
           list-style-type: none;
